python-sample/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-sample
  name: python-sample
  namespace: python-sample
spec:
  host: python-sample-python-sample.apps.demo-hub.tx6d.p1.openshiftapps.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: python-sample
